# Tools

./: CMakeLists.txt  LICENSE  README.md  build.bat  generate.bat
BitChecker/: CMakeLists.txt  Main.cpp
Documents/: CMakeLists.txt  Commands.txt
FileLocker/: CMakeLists.txt  Main.cpp
